# Money-fast-api

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 075a77ebbfb8_add_company_multitenant_superadmin.py  a6b7c8d9e0f1_add_branch_to_routes_and_users.py  b1c2d3e4f5a6_add_customer_assigned_collector.py  b7c8d9e0f1a2_add_paypal_recurring_fields.py  c2d3e4f5a6b7_add_subscriptions.py  d3e4f5a6b7c8_add_routes_and_customer_gps.py  e4f5a6b7c8d9_add_user_live_location.py  f5a6b7c8d9e0_add_location_pings.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  branches.py  companies.py  company_settings.py  customers.py  loan_settings.py  loans.py  payments.py  plans.py  print_settings.py  routes.py  subscriptions.py  users.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  app_setting.py  branch.py  company.py  company_settings.py  customer.py  loan.py  loan_settings.py  location_ping.py  password_reset.py  payment.py  plan.py  print_settings.py  route.py  session.py  subscription.py  user.py
app/schemas/: auth.py  branch.py  company_settings.py  customer.py  loan.py  loan_settings.py  payment.py  plan.py  print_settings.py  route.py  subscription.py  user.py
app/services/: email_service.py  loan_service.py  payment_service.py  paypal_billing.py  paypal_client.py  plan_limits.py  route_service.py  subscription_service.py
scripts/: seed_multitenant.py
tests/: test_api.py
