[project]
name = "moneyfast-api"
version = "0.1.0"
description = "FastAPI backend for MoneyFast"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1",
  "email-validator>=2.2.0",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.10.1",
  "python-jose[cryptography]>=3.5.0",
  "pwdlib[argon2]>=0.2.1",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false
